# finnal_cmake

./: CMakeLists.txt  README.md  main.cpp  myplus.cpp  myplus.h
libadd/: CMakeLists.txt  myadd.cpp
libadd/include/: myadd.h
libsub/: CMakeLists.txt  mysub.cpp
libsub/include/: mysub.h
